--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -10,10 +10,14 @@
 }
 
 .contactsList__button {
+  display: flex;
+  align-items: center;
+
+
   border: transparent;
   background-color: lightslategray;
   color: #ffffff;
-  padding: 8px;
+  padding: 12px;
   font-size: 18px;
   width: 100px;
   cursor: pointer;
@@ -28,4 +32,9 @@
 .contactsList__button:focus {
   background-color: rgb(66, 91, 115);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.deleteIcon {
+  fill: #ffffff;
+  margin-right: 5px;
 }
